--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "element-ui": "^2.15.100",
+    "element-ui": "^2.15.0",
     "sass": "^1.54.8",
     "three": "^0.144.0",
+    "vite-plugin-require-transform": "^1.0.3",
     "vue": "^2.6.14",
     "vue-router": "3.6.5"
   },
